@@ -112,8 +112,8 @@ if (MINGW)
 endif()
 
 set(CPACK_PACKAGE_VERSION_MAJOR "2024")
-set(CPACK_PACKAGE_VERSION_MINOR "02")
-set(CPACK_PACKAGE_VERSION_PATCH "18")
+set(CPACK_PACKAGE_VERSION_MINOR "07")
+set(CPACK_PACKAGE_VERSION_PATCH "28")
 
 if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
 	install(TARGETS ${PROJECT_NAME} DESTINATION "bin")
